# translation-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md
src/: context.rs  main.rs  open_api.rs  settings.rs  translation_api.rs  translator.rs
