[package]
name = "translation"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web: Web framework for building web applications in Rust.
actix-web = "4.4.0"
once_cell = "1.18.0"
# rust-bert: Natural language processing library for Rust, used for translation.
rust-bert = { version = "0.21.0" }
# serde: Serialization and deserialization library for JSON.
serde = { version = "1.0.188", features = ["derive"] }
# serde_json: JSON support for serde, used for handling JSON data.
serde_json = "1.0.107"
# tch: Rust library for high-performance machine learning.
tch = "0.13.0"
# thiserror: Library for easily defining custom errors.
thiserror = "1.0.48"
# tokio: Asynchronous runtime for building async applications.
tokio = "1.32.0"
# tracing: Application-level tracing framework for monitoring and debugging.
tracing = "0.1.37"
# tracing-actix-web: Integration between Actix Web and the tracing framework.
tracing-actix-web = "0.7.6"
# tracing-subscriber: Subscriber for the tracing framework, used for log output.
tracing-subscriber = "0.3.17"
# utoipa: Open api tooling.
utoipa = { version = "3.5.0", features = ["actix_extras"] }
# utoipa-redoc: Redoc UI.
utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }
