[package]
name = "translation"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web: Web framework for building web applications in Rust.
actix-web = "4.4.0"
config = "0.13.3"
once_cell = "1.18.0"
ort = { version = "=1.14.8" }
# rust-bert: Natural language processing library for Rust, used for translation.
rust-bert = { version = "0.21.0", default-features = false, features = [
  "onnx",
] }
# serde: Serialization and deserialization library for JSON.
serde = { version = "1.0.188", features = ["derive"] }
# serde_json: JSON support for serde, used for handling JSON data.
serde_json = "1.0.107"
# tch: Rust library for high-performance machine learning.
tch = "0.13.0"
# thiserror: Library for easily defining custom errors.
thiserror = "1.0.48"
# tokio: Asynchronous runtime for building async applications.
tokio = "1.32.0"
# tracing: Application-level tracing framework for monitoring and debugging.
tracing = "0.1.37"
# tracing-actix-web: Integration between Actix Web and the tracing framework.
tracing-actix-web = "0.7.6"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
# utoipa: Open api tooling.
utoipa = { version = "3.5.0", features = ["actix_extras"] }
# utoipa-redoc: Redoc UI.
utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
